--- a/lib/rack/showme/public/showme.css
+++ b/lib/rack/showme/public/showme.css
@@ -1,12 +1,26 @@
-#show-me-message {
+/* ribbon */
+#rack-show-me-message-box {
 	border-bottom: 1px solid #999;
 	border-right: 1px solid #999;
   position: fixed;
   top: 0;
   left: 0;
 	padding: 4px 7px;
-	background-color: #FFF8C6;
-	color: #333;
 	cursor: pointer;
 	z-index: 2147483640;
+}
+
+.rack-show-me-colorscheme-yellow {
+	background-color: #FFF8C6;
+	color: #333333;
+}
+
+.rack-show-me-colorscheme-red {
+	background-color: #FD0006;
+	color: #000000;
+}
+
+.rack-show-me-colorscheme-green {
+	background-color: #42e73A;
+	color: #333333;
 }
